# llm-copilot

./: .gitignore  README.md  llm_copilot.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_copilot.py
